# pyiArduinoI2Ckeyboard

./: .gitignore  .pdm-python  .setup.cfg.un~  .setup.py.un~  MANIFEST.in  README  README.md  pyproject.toml  setup.py  setup.py~
pyiArduinoI2Ckeyboard/: .iarduino_I2C_Keyboard.cpp.swp  .iarduino_I2C_Keyboard.h.swp  .iarduino_I2C_Keyboard.pxd.swp  .pyiArduinoI2Ckeyboard.pyx.swp  __init__.py  clean.sh  iarduino_I2C_Keyboard.cpp  iarduino_I2C_Keyboard.h  iarduino_I2C_Keyboard.pxd  iarduino_I2C_PI.h  omg.vim  pyiArduinoI2Ckeyboard.cpp  pyiArduinoI2Ckeyboard.pyx  setup.py
pyiArduinoI2Ckeyboard/cpp/: FindDevices  Makefile  NewAddress  NewAddress.cpp  getAllKeyState  getAllKeyState.cpp  getKeyState.cpp  getTime.cpp  main.cpp  printChar.cpp  printString.cpp  setAllLed_KeyState.cpp  setAnimation.cpp  setLed.cpp  setLed_KeyState.cpp  setLight.cpp  setSettings.cpp
pyiArduinoI2Ckeyboard/examples/: getAllKeyState.py  getKeyState.py  getTime.py  newAddress.py  printChar.py  printString.py  setAllLed_KeyState.py  setAnimation.py  setLed.py  setLed_KeyState.py  setLight.py  setSettings.py
pyiArduinoI2Ckeyboard/tools/: recom.sh
